--- a/08_Webpack/02_Asset-Management/src/style.css
+++ b/08_Webpack/02_Asset-Management/src/style.css
@@ -1,4 +1,14 @@
+@font-face {
+    font-family: 'MyFont';
+    src:    url('./my-font.ttf') format('ttf'),
+            url('./my-font-1.ttf') format('ttf'),
+            url('./my-font-2.ttf') format('ttf');
+    font-weight: 600;
+    font-style: bold italic;
+}
+
 .hello {
     color: red;
-    background: url('./icon.jpg');
+    font-family: 'MyFont';
+    /* background: url('./icon.jpg'); */
 }
